test/functions/vass/passing-iterator-as-argument.good
passing-iterator-as-argument.chpl:7: error: passing iterators by name is not yet supported
